// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CitySelector snapshot > CitySelector demo snapshot 0 1`] = `
<div>
  <div
    class="bui-city-selector"
    style="height: 500px;"
  >
    <div
      class="bui-scroll bui-scroll-view-scroll-y bui-city-selector-scroll-view-container tph"
    >
      <div
        class="bui-city-selector-all-city"
      >
        <div>
          <div
            class="select-city-title"
            id="CRRT"
          >
            当前城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              北京
            </span>
          </div>
        </div>
        <div>
          <div
            class="select-city-title"
            id="GPS"
          >
            定位城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              上海
            </span>
          </div>
        </div>
        <div>
          <div
            class="select-city-title"
            id="HOT"
          >
            热门城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              北京
            </span>
            <span
              class="bui-city-selector-item"
            >
              上海
            </span>
            <span
              class="bui-city-selector-item"
            >
              广州
            </span>
          </div>
        </div>
        <div
          class="bui-city-selector-list-container"
        >
          <div>
            <div
              class="select-city-title"
              id="A"
            >
              A
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                安康
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                鞍山
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id="B"
            >
              B
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                巴音郭楞
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                巴中
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id="C"
            >
              C
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                沧州
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                长春
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id="D"
            >
              D
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                大理
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                大连
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bui-city-selector-index-container left-in"
    >
      <ul
        class="bui-city-selector-index-list"
      >
        <li
          class="bui-city-selector-index-item"
          data-code="CRRT"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          当前
        </li>
        <li
          class="bui-city-selector-index-item"
          data-code="GPS"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          定位
        </li>
        <li
          class="bui-city-selector-index-item"
          data-code="HOT"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          热门
        </li>
        <li
          class="bui-city-selector-index-item"
          data-code="A"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          A
        </li>
        <li
          class="bui-city-selector-index-item"
          data-code="B"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          B
        </li>
        <li
          class="bui-city-selector-index-item"
          data-code="C"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          C
        </li>
        <li
          class="bui-city-selector-index-item"
          data-code="D"
          style="max-height: calc((0vh - 6vmin) / 7);"
        >
          D
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`CitySelector snapshot > CitySelector demo snapshot 0 2`] = `
<div>
  <div
    class="bui-city-selector"
    style="height: 500px;"
  >
    <div
      class="bui-city-selector-title"
    >
      选择城市
      <div
        class="bui-city-selector-btn-close"
      >
        ✕
      </div>
    </div>
    <div
      class="bui-scroll bui-scroll-view-scroll-y bui-city-selector-scroll-view-container tph container-has-title"
    >
      <div
        class="bui-city-selector-all-city"
      >
        <div>
          <div
            class="select-city-title"
            id=""
          >
            当前城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              北京
            </span>
          </div>
        </div>
        <div>
          <div
            class="select-city-title"
            id=""
          >
            定位城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              上海
            </span>
          </div>
        </div>
        <div>
          <div
            class="select-city-title"
            id=""
          >
            热门城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              北京
            </span>
            <span
              class="bui-city-selector-item"
            >
              上海
            </span>
            <span
              class="bui-city-selector-item"
            >
              广州
            </span>
          </div>
        </div>
        <div
          class="bui-city-selector-list-container"
        >
          <div>
            <div
              class="select-city-title"
              id=""
            >
              A
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                安康
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                鞍山
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id=""
            >
              B
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                巴音郭楞
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                巴中
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id=""
            >
              C
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                沧州
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                长春
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id=""
            >
              D
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                大理
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                大连
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CitySelector snapshot > CitySelector demo snapshot 0 3`] = `
<div>
  <div
    class="bui-city-selector"
    style="height: 500px;"
  >
    <div
      class="bui-scroll bui-scroll-view-scroll-y bui-city-selector-scroll-view-container tph"
    >
      <div
        class="bui-city-selector-all-city"
      >
        <div>
          <div
            class="select-city-title"
            id=""
          >
            当前城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              北京
            </span>
          </div>
        </div>
        <div>
          <div
            class="select-city-title"
            id=""
          >
            定位城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              上海
            </span>
          </div>
        </div>
        <div>
          <div
            class="select-city-title"
            id=""
          >
            热门城市
          </div>
          <div
            class="select-city-buttons"
          >
            <span
              class="bui-city-selector-item"
            >
              北京
            </span>
            <span
              class="bui-city-selector-item"
            >
              上海
            </span>
            <span
              class="bui-city-selector-item"
            >
              广州
            </span>
          </div>
        </div>
        <div
          class="bui-city-selector-list-container"
        >
          <div>
            <div
              class="select-city-title"
              id=""
            >
              A
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                安康
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                鞍山
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id=""
            >
              B
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                巴音郭楞
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                巴中
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id=""
            >
              C
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                沧州
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                长春
              </li>
            </ul>
          </div>
          <div>
            <div
              class="select-city-title"
              id=""
            >
              D
            </div>
            <ul
              class="bui-city-selector-list"
            >
              <li
                class="bui-city-selector-list-item"
              >
                大理
              </li>
              <li
                class="bui-city-selector-list-item"
              >
                大连
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
